Fix reserve alert message
This commit fix the reserve alert message overlapping other elements in the page.
https://trello.com/c/MhkPZVsk

--- a/app/assets/stylesheets/reserves.scss
+++ b/app/assets/stylesheets/reserves.scss
@@ -94,7 +94,7 @@ main {
   .reserve-name {
     padding: 0 1.25rem;
     position: absolute;
-    top: -275px;
+    top: 200px;
 
     h1 {
       color: $white;
@@ -129,18 +129,27 @@ main {
       margin-bottom: 2.5rem;
     }
 
-    .reserve-message:empty {
-      display: none;
-    }
-
     .reserve-message {
       background-color: $gold;
       border-radius: 0.3125rem;
       font-size: 0.8125rem;
-      margin-right: 60px;
-      padding: 1.25rem 1.25rem 1.25rem 50px;
-      position: absolute;
-      top: -40px;
+      margin-bottom: -50px;
+      padding: 1.4rem 1.5rem 1.5rem 50px;
+      position: relative;
+      top: -100px;
+
+      > p:first-of-type {
+        margin-top: 0;
+      }
+
+      > p:last-of-type {
+        margin-bottom: 0;
+      }
+
+      p {
+        line-height: 1.5rem;
+        margin-bottom: 1.2rem;
+      }
     }
 
     .reserve-message::before {
@@ -150,8 +159,12 @@ main {
       height: 1.125rem;
       left: 1.25rem;
       position: absolute;
-      top: 1.25rem;
+      top: 1.55rem;
       width: 1.125rem;
+    }
+
+    .reserve-message:empty {
+      display: none;
     }
 
     .reserve-description:empty {
